--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,13 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": ["airbnb", "prettier"],
+  "rules": {
+    "react/prop-types": 0,
+    "import/no-unresolved": 0,
+    "import/extensions": 0,
+    "react/jsx-props-no-spreading": 0,
+    "react/jsx-curly-brace-presence": 0,
+    "react/function-component-definition": 0,
+    "no-undef": 0,
+    "import/prefer-default-export": 0
+  }
 }
