--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,7 @@
     "import/prefer-default-export": 0,
     "jsx-a11y/click-events-have-key-events": 0,
     "jsx-a11y/no-static-element-interactions": 0,
-    "react/no-unknown-property": 0
+    "react/no-unknown-property": 0,
+    "no-nested-ternary": 0
   }
 }
