--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.1.0"
+    "react-icons": "^5.1.0",
+    "react-vertical-timeline-component": "^3.6.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.0.2",
